prevent scroll bar from covering chat settings cog

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,3 +54,7 @@ input {
 .bold {
   font-weight: 900;
 }
+
+::-webkit-scrollbar {
+  width: 0px; /* remove scrollbar space */
+}
